<?xml version="1.0"?>
<package format="2">
  <name>fk-for-stewart-platform-ros</name>
  <version>0.0.0</version>
  <description>The fk-for-stewart-platform-ros package</description>

<maintainer email="roscore@kakao.com">jun</maintainer>


 <license>TODO</license>


 <buildtool_depend>catkin</buildtool_depend>
 <buildtool_depend>std_msgs</buildtool_depend>
 <buildtool_depend>geometry_msgs</buildtool_depend>
 <buildtool_depend>sensor_msgs</buildtool_depend>

  <export>
  </export>
</package>
